# try_qwen

./: .gitignore  README.md
tcpclient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
